wei very close to being completely done, 7 events left

--- a/localization/english/missions/wei_missions_l_english.yml
+++ b/localization/english/missions/wei_missions_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
 
- wei_missions:0 "Wei Wei"
- wei_missions_DESCRIPTION:0 "Mission description"
- wei_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when"
- wei_missions_BUTTON_TOOLTIP:0 ""
+ wei_missions: "A New Wei Forward"
+ wei_missions_DESCRIPTION: "Our kingdom was borne out of the #E Partition of Jin#!, and from that pivotal moment, we have been on the back foot ever since. Although our fledgling state was blessed in the beginning with two strong rulers in #E Marquess Wen#! and #E Marquess Wu#!, in the last few years, every time that [ROOT.GetCountry.GetRuler.GetName] has thrown the knucklebones, Wei has come up short.\n\nWe have been stymied in our expansion since the disastrous #E Battle of Maling#! nearly forty years ago, and other nations - particularly [GetCountry('QIN').GetName], whom we once dismissed as a kingdom of wastelands - have become ascendant. If we hope to survive the years to come, then we must find a new way forward."
+ wei_missions_CRITERIA_DESCRIPTION: "This mission will be completed when [ROOT.GetCountry.GetName] has restored its former lands and prestige, rectfiying the sins of the past."
+ wei_missions_BUTTON_TOOLTIP: "The road ahead is dangerous, and yet we have no other path..."
 
  #Missions
 
@@ -66,74 +66,74 @@
 
 
  #Events 
- me_wei_1_title:0 "$wei_missions_task_1$"
- me_wei_1_desc:0 ""
- me_wei_1.a:0 ""
+ me_wei_1_title: "$wei_missions_task_1$"
+ me_wei_1_desc: "'I think I caught one!'\n\nA few moments later, after a mighty struggle against a taut fishing line, a giant catfish plopped into the bottom of the boat, and [ROOT.GetCountry.GetRuler.GetName] let out a triumphant battle cry. [ROOT.GetCountry.GetRuler.GetFirstName] and his lover, the courtier #E Jun Longyang#!, had stolen away together, finding some precious time away from [ROOT.GetCountry.GetCapital.GetName] out on the river.\n\nMuch to [ROOT.GetCountry.GetRuler.GetFirstName]'s surprise, when Jun saw the giant catfish flopping around the bottom of their boat, instead of celebrating with his [ROOT.GetCountry.GetRulerTitle], he burst into tears.\n\n'I fear that one day, your Majesty will find a bigger, better fish, and I will be discarded. Perhaps you will meet a beautiful woman, the wife of a King, and you will forget about Jun Longyang.' Resting his hand tenderly on Jun's cheek, [ROOT.GetCountry.GetRuler.GetFirstName] drew his lover close to him and murmured a promise."
+ me_wei_1.a: "Anyone that tries to come between us, I shall execute"
 
- me_wei_2_title:0 "$wei_missions_task_2$"
- me_wei_2_desc:0 ""
- me_wei_2.a:0 ""
+ me_wei_2_title: "$wei_missions_task_2$"
+ me_wei_2_desc: "My Lord, we have received an insult from [GetCountry('CHU').GetRuler.GetName], who has been made aware of our claims on his lands. 'The corpses of your soldiers shall feed the crows in the fields and their blood will water next year's harvest - prepare yourself to meet the gods of the underworld!'.\n\nIt seems that [GetCountry('CHU').GetRuler.GetFirstName] does not take our incursion into his lands lightly, but what is the corrupt King going to do besides wail and moan?"
+ me_wei_2.a: "Can they match these bold words with action?"
 
- me_wei_3_title:0 "$wei_missions_task_3$"
- me_wei_3_desc:0 ""
- me_wei_3.a:0 ""
+ me_wei_3_title: "$wei_missions_task_3$"
+ me_wei_3_desc: "The #E Partition of Jin#! resulted in the creation of [ROOT.GetCountry.GetName], but our lands have never been united into one cohesive whole, but have rather been fragmented into smaller duchies - a problem that [ROOT.GetCountry.GetRuler.GetName] has solved.\n\n[ROOT.GetCountry.GetRuler.GetFirstName] hopes that the people of [GetCountry('HAN').GetRuler.GetName] will be amenable to the course of action that our [ROOT.GetCountry.GetRulerTitle] has proposed - will Han open up their border to allow our soldiers through?"
+ me_wei_3.a: "I eagerly await good news from Zheng"
  
- me_wei_300_title:0 ""
- me_wei_300_desc:0 ""
- me_wei_300.a:0 "Accept their offer."
- me_wei_300.b:0 "Refuse their offer."
+ me_wei_300_title: "A Request From Wei"
+ me_wei_300_desc: "My Lord, we have received diplomats from the kingdom of [GetCountry('WEI').GetName], who are requesting permission to move their military forces through our land.\n\nAs you know, their holdings are scattered and disunited, and their ruler, [GetCountry('WEI').GetRuler.GetName], is said to be ambitious."
+ me_wei_300.a: "Accept their offer."
+ me_wei_300.b: "Refuse their offer."
  
- me_wei_301_title:0 ""
- me_wei_301_desc:0 ""
- me_wei_301.a:0 ""
+ me_wei_301_title: "Words Of Refusal"
+ me_wei_301_desc: "The King of [GetCountry('HAN').GetName], [GetCountry('HAN').GetRuler.GetName], has laughed at the request of [ROOT.GetCountry.GetRuler.GetName], sending an impertinent reply to [ROOT.GetCountry.GetCapital.GetName] that made [ROOT.GetCountry.GetRuler.GetFirstName]'s blood boil.\n\n'Why would we give you, a rival for power, access to more of your possessions? Say farewell to your faraway provinces, for they will not be yours forever.'"
+ me_wei_301.a: "This is incredibly annoying to hear..."
  
- me_wei_302_title:0 ""
- me_wei_302_desc:0 ""
- me_wei_302.a:0 ""
+ me_wei_302_title: "The Wisdom Of The Han"
+ me_wei_302_desc: "[ROOT.GetCountry.GetRuler.GetName], not only has the kingdom of [GetCountry('HAN').GetName] agreed to give our levies military access, but they have actually requested that they become a #E feudatory#! of [ROOT.GetCountry.GetName] - an outcome that no one could have foreseen.\n\nThe letter sent by [GetCountry('HAN').GetRuler.GetName] was filled with flowery language, appealing to the vanity of [ROOT.GetCountry.GetRuler.GetFirstName] by showering [ROOT.GetCountry.GetRuler.GetHerHim] with compliments."
+ me_wei_302.a: "The people of Han are smarter than I gave them credit for"
 
- me_wei_4_title:0 "$wei_missions_task_4$"
- me_wei_4_desc:0 ""
- me_wei_4.a:0 ""
+ me_wei_4_title: "$wei_missions_task_4$"
+ me_wei_4_desc: "Although it has been a difficult task - easily the hardest thing that [ROOT.GetCountry.GetRuler.GetName] has ever done - our [ROOT.GetCountry.GetRulerTitle] has accomplished enough on the international stage to get our neighbors to forget about the #E Battle of Maling#! and what it did to our people's prospects for the future.\n\nThanks to the growing clout and prestige of the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], the citizens of [ROOT.GetCountry.GetCapital] only sing the praises of the [ROOT.GetCountry.GetRulerTitle] - the weaknesses of [ROOT.GetCountry.GetRuler.GetHerHis] ancestors have been forgotten."
+ me_wei_4.a: "What an accomplishment for the people of Wei!"
 
- me_wei_5_title:0 "$wei_missions_task_5$"
- me_wei_5_desc:0 ""
- me_wei_5.a:0 ""
+ me_wei_5_title: "$wei_missions_task_5$"
+ me_wei_5_desc: "We have received good news from the front - [GetProvince('(int32)8435').GetName] is firmly in our possession, ending a shameful episode where the city indulged in delusions of independence from [ROOT.GetCountry.GetName].\n\nNow that our garrisons patrol the streets of the town, ushering forth an era of peace and prosperity that the citizens of Puyang have never experienced, the prestige and fame of the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] continues to grow."
+ me_wei_5.a: "Onward to bigger and better things!"
 
- me_wei_6_title:0 "$wei_missions_task_6$"
- me_wei_6_desc:0 ""
- me_wei_6.a:0 ""
+ me_wei_6_title: "$wei_missions_task_6$"
+ me_wei_6_desc: "The unprecedented string of victories won by [ROOT.GetCountry.GetRuler.GetName] continues, as the rulers of [GetCountry('SNG').GetName] have finally been cast down and forced to submit to [ROOT.GetCountry.GetName]. Their rich farmlands and expansive plains now belong to [ROOT.GetCountry.GetRuler.GetFirstName], who exercises ultimate authority against all in [ROOT.GetCountry.GetRuler.GetHerHis] realm.\n\nSlowly but surely, the holdings of Wei are expanding and solidifying - a sign of good things to come."
+ me_wei_6.a: "I have not yet begun to fight!"
 
- me_wei_7_title:0 "$wei_missions_task_7$"
- me_wei_7_desc:0 ""
- me_wei_7.a:0 ""
+ me_wei_7_title: "$wei_missions_task_7$"
+ me_wei_7_desc: "Over the last few months, [ROOT.GetCountry.GetRuler.GetName] has slowly been preparing our kingdom for conflicts in the west. It has not been easy, preparing our soldiers and people for the difficult task ahead of us, but [ROOT.GetCountry.GetRuler.GetFirstName] has vowed that unless [ROOT.GetCountry.GetName] is able to reclaim our western territories, [ROOT.GetCountry.GetRuler.GetSheHe] will not eat and sleep."
+ me_wei_7.a: "The western lands are more important to me than life itself!"
 
- me_wei_8_title:0 "$wei_missions_task_8$"
- me_wei_8_desc:0 ""
- me_wei_8.a:0 ""
+ me_wei_8_title: "$wei_missions_task_8$"
+ me_wei_8_desc: "The selfless [ROOT.GetCountry.GetRuler.GetName] has been convinced to absorb the kingdom of [GetCountry('HAN').GetName] within the illustrious borders of [ROOT.GetCountry.GetName]. Although the inferior people of Han cannot compare to the citizens of Wei, our [ROOT.GetCountry.GetRulerTitle] has hopes that, over time, they will emulate our admirable ways."
+ me_wei_8.a: "All in all, this is a boon for us, so I am pleased"
 
- me_wei_9_title:0 "$wei_missions_task_9$"
- me_wei_9_desc:0 ""
- me_wei_9.a:0 ""
+ me_wei_9_title: "$wei_missions_task_9$"
+ me_wei_9_desc: "When [ROOT.GetCountry.GetRuler.GetName] issued the command for the fortifications of [GetProvince('(int32)8344').GetName] and [GetProvince('(int32)8446').GetName] to be expanded, the kingdom of #E Wei#! exploded with activity.\n\nAfter many months of expensive repairs and upgrades, the labors of our engineers and architects have finally ceased, and our exhausted workers can return to their homes with bags of silver and bellies filled with rice, pleased with the knowledge that they exceeded the hopes of our [ROOT.GetCountry.GetRulerTitle]. Word has spread quickly about our reimagined city walls, and [ROOT.GetCountry.GetRuler.GetFirstName] hopes that our enemies are listening."
+ me_wei_9.a: "It would be foolish to attack Wei - are you a fool?"
 
- me_wei_10_title:0 "$wei_missions_task_10$"
- me_wei_10_desc:0 ""
- me_wei_10.a:0 ""
+ me_wei_10_title: "$wei_missions_task_10$"
+ me_wei_10_desc: "Now that the wise [ROOT.GetCountry.GetRuler.GetName] has secured powerful allies in the north for [ROOT.GetCountry.GetName], our [ROOT.GetCountry.GetRulerTitle] has been making quiet inquiries amongst our new friends. It seems that [ROOT.GetCountry.GetRuler.GetFirstName] has [ROOT.GetCountry.GetRuler.GetHerHis] eye on taking more territories, and will happily send our levies north of the #E River He#! if it will increase the power of Wei."
+ me_wei_10.a: "Who are your enemies, and how can we help defeat them?"
 
- me_wei_11_title:0 "$wei_missions_task_11$"
- me_wei_11_desc:0 ""
- me_wei_11.a:0 ""
+ me_wei_11_title: "$wei_missions_task_11$"
+ me_wei_11_desc: "With our eastern borders secured and the threat of a resurgent [GetCountry('QII').GetName] dealt with, [ROOT.GetCountry.GetRuler.GetName] finally feels comfortable enough to funnel the resources of [ROOT.GetCountry.GetName] against the looming threat in the west - [GetCountry('QIN').GetName].\n\nThe days to come will be filled with bloodshed and misery for the common man, and yet the indomitable [ROOT.GetCountry.GetRuler.GetFirstName] cannot be dissuaded - Qin must be utterly destroyed."
+ me_wei_11.a: "We will send the armies of Qin back to their wild wastelands"
 
- me_wei_12_title:0 "$wei_missions_task_12$"
- me_wei_12_desc:0 ""
- me_wei_12.a:0 ""
+ me_wei_12_title: "$wei_missions_task_12$"
+ me_wei_12_desc: "Thanks to the efforts of [ROOT.GetCountry.GetRuler.GetName], the so-called 'undefeated' armies of [GetCountry('QIN').GetName] have been driven out of their most valuable territories, including their capital of [GetProvince('(int32)8313').GetName], and have been sent packing into the dusty mountains and foothills that they came from.\n\nAs the old saying goes, a wounded lion is still a threat, but [ROOT.GetCountry.GetRuler.GetName] feels confident enough in [ROOT.GetCountry.GetRuler.GetHerHis] victories to proclaim that #E Qin#! has been defeated."
+ me_wei_12.a: "I have cast down the mighty and crushed the strong!"
 
- me_wei_13_title:0 "$wei_missions_task_13$"
- me_wei_13_desc:0 ""
- me_wei_13.a:0 ""
+ me_wei_13_title: "$wei_missions_task_13$"
+ me_wei_13_desc: "Now that the armies of [ROOT.GetCountry.GetName] have made inroads into the former lands of the [GetCountry('ZHA').GetName], the [ROOT.GetCountry.GetRulerTitle] has demanded that the dearth in our manpower be replaced by conscriptions.\n\nOur wars have taxed the strength of the kingdom, and although the northern territories are gripped with unrest due to this unpopular decision, [ROOT.GetCountry.GetRuler.GetName] has ignored the concerns of [ROOT.GetCountry.GetRuler.GetHerHis] advisors."
+ me_wei_13.a: "I know what is best for Wei - speak no more of this"
 
- me_wei_14_title:0 "$wei_missions_task_14$"
- me_wei_14_desc:0 ""
- me_wei_14.a:0 ""
+ me_wei_14_title: "$wei_missions_task_14$"
+ me_wei_14_desc: "Now that some of our external enemies have been humbled, [ROOT.GetCountry.GetRuler.GetName] has turned [ROOT.GetCountry.GetRuler.GetHerHis] attention inward. Some of the greatest signs of the [ROOT.GetCountry.GetRulerTitle]'s interest in beautifying [ROOT.GetCountry.GetName] can be found in [GetProvince('(int32)8344').GetName] and [GetProvince('(int32)8446').GetName], the two cities that have repeatedly been the beneficiaries of the royal largesse.\n\nThanks to the investments made at the state level, Daliang has earned a reputation for being a 'beautiful city', which has attracted architects hoping to study the grand designs of the capital."
+ me_wei_14.a: "Wars come and go, but architecture is a permanent legacy"
 
  me_wei_15_title:0 "$wei_missions_task_15$"
  me_wei_15_desc:0 ""
@@ -163,20 +163,20 @@
  me_wei_18_desc:0 ""
  me_wei_18.a:0 ""
  
- me_wei_19_title:0 "$wei_missions_task_19$"
- me_wei_19_desc:0 ""
- me_wei_19.a:0 ""
+ me_wei_19_title: "$wei_missions_task_19$"
+ me_wei_19_desc: "Thanks to the ports that [ROOT.GetCountry.GetRuler.GetName] has built along the #E Yellow River#!, our administrators in charge of the region's finances have submitted a glowing report to the [ROOT.GetCountry.GetRulerTitle].\n\nAll of the metrics are positive; incomes and taxes are growing, new trade routes are being established, and merchants are permanently settling in the region. What a brilliant course of action, [ROOT.GetCountry.GetRuler.GetFirstName]!"
+ me_wei_19.a: "I am pleased by this - thank you"
  
- me_wei_20_title:0 ""
- me_wei_20_desc:0 ""
- me_wei_20.a:0 ""
+ me_wei_20_title: "A Legacy Of Shame"
+ me_wei_20_desc: "For many years, the people of [ROOT.GetCountry.GetName] have been quietly struggling, and it is the fault of the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], for they have not been good stewards of the land and they have been terrible military leaders.\n\nThe ruinous effects of the #E Battle of Maling#! still clings to the Royal House like the stench of death upon a corpse, and it is feared throughout [ROOT.GetCountry.GetCapital.GetName] that, unless [ROOT.GetCountry.GetRuler.GetName] is able to change our ways, then our days are numbered - just like the #E Jin#! before us.\n\nIt remains to be seen if [ROOT.GetCountry.GetRuler.GetFirstName] has what it takes - his father, [GetCharacter('(int32)511').GetName], almost certainly did not."
+ me_wei_20.a: "I will do what I can to correct our course"
 
  #Treasure
  wei_bamboo_annals: "Bamboo Annals"
  wei_bamboo_annals_desc: "An impressive history that covers a wide period within the Middle Kingdom, the Bamboo Annals were commissioned by the Lords of Wei."
  
  #Modifiers
- longyang_fish_mod: "The Lover's Promise"
+ longyang_fish_mod: "Longyang's Affection"
  legacy_of_maling: "Shameful Legacy of the Battle of Maling"
  unified_weiis: "Submission of Weii"
  wei_northern_allies: "Northern Allies"
