Miao and Nanyue Formables

--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -763,7 +763,7 @@
 
  # Yangyu
  yangyu_heritage:0 "Miao Remnant Heritage"
- yangyu_heritage_desc:0 "The Yangu existed as a dispersed remnant of the ancient Miao people and the Sam Miao kingdom they once populated by the dominance of the Chu. All Miao people were said to have descended from the legendary Jiuli tribe, but they were defeated by Yu the Great in battles and were thus dispersed by the encroaching Yue peoples. The rest were subjugated by the Chinese of the Central Plains region. Yangyu, practically a Chu puppet, remains as the last glimpse of Miao independence and greatness."
+ yangyu_heritage_desc:0 "The Yangu existed as a dispersed remnant of the ancient Miao people and the San Miao kingdom they once populated by the dominance of the Chu. All Miao people were said to have descended from the legendary Jiuli tribe, but they were defeated by Yu the Great in battles and were thus dispersed by the encroaching Yue peoples. The rest were subjugated by the Chinese of the Central Plains region. Yangyu, practically a Chu puppet, remains as the last glimpse of Miao independence and greatness."
 
  # Fulou
  fulou_heritage:0 "Heritage of Watery Pearls"
@@ -1352,3 +1352,16 @@
  ti_nation_formation_events.2.desc: "TODO"
  ti_nation_formation_events.2.a: "Let us claim the Lu heritage."
  ti_nation_formation_events.2.b: "We are strong ourselves."
+ 
+ MIA_NAME: "San Miao"
+ MIA_ADJ: "Miao"
+ restoration_of_miao: "Restoration of San Miao"
+ desc_restoration_of_miao: "All Miao people are again united."
+ form_miao: "Form San Miao"
+ form_miao_desc: "All Miao people were said to have descended from the legendary Jiuli tribe, but they were defeated by Yu the Great in battles and were thus dispersed by the encroaching Yue peoples. The rest were subjugated by the Chinese of the Central Plains region. \n\nIt is time for us to reverse this and unite all Miao people again."
+ 
+ 
+ NANYUE_NAME: "Nanyue"
+ NANYUE_ADJECTIVE: "Nanyuan"
+ form_nanyue: "Form Nanyue"
+ form_nanyue_desc: "TODO"
