--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -11,7 +11,7 @@
  xiongnu_missions_2_task_1_DESC: "The bane of our existence for centuries - the Yuezhi - must pay for their treachery against the great Chanyu Modun. The time has come, and our hooves are ready, to finally put an end to our greatest rival in the region. The Yuezhi shall be exterminated."
 
  xiongnu_missions_2_task_2: "Luandi Dynasty"
- xiongnu_missions_2_task_2_DESC: ""
+ xiongnu_missions_2_task_2_DESC: "The greatness of Modun to forge a steppe empire from such a diverse set peoples across Asia attests to the vitalityof the Luandi bloodline. Forever will the descendants of Modun be respected and feared as the progeny of the greatest horselord to have ever lived."
 
  xiongnu_missions_2_task_3: "The Gryphons' Gold"
  xiongnu_missions_2_task_3_DESC: "The great mountains on our western border are said to be inhabited by gold-guarding gryphons - in reality they are but another tribal people who hoard the vast welath of the Altai Mountains for themselves. We will show them to be mere mortal men as they submit to the iron and hoof of the Chanyu."
@@ -26,7 +26,7 @@
  xiongnu_missions_2_task_6_DESC: "The politics of the steppe necessitate continuous demonstration of power against those who would challenge the rule of the Chanyu, lest our rule be delegitimized. Upstart tribal elites may find it tempting to vye for the position of Chanyu, until we put them in their place."
 
  xiongnu_missions_2_task_7: "Lake Balkash"
- xiongnu_missions_2_task_7_DESC: "Just past the Altai to our west lay the great Lake Balkash, around which some of the best pastures and grasslands of the steppe lay waiting for us. Lesser horselords have long squabbled over the region, and it well out of reach of the great southern empires. The time has come to integrate the region into our ever-growing empire."
+ xiongnu_missions_2_task_7_DESC: "Just past the Altai to our west lay the great Lake Balkash, around which some of the best pastures and grasslands of the steppe lay waiting for us. Lesser horselords have long squabbled over the region, and it is well out of reach of the great southern empires. The time has come to integrate the region into our ever-growing empire."
 
  xiongnu_missions_2_task_8: "A Golden Horse"
  xiongnu_missions_2_task_8_DESC: "Our numerous conquests have brought gold resources under our control. Let us exploit the new mines and fashion a great golden horse to glorify the Chanyu."
@@ -41,37 +41,37 @@
  xiongnu_missions_2_task_11_DESC: "Our conquests and contact with the Chinese have led to appreciation for finer prestige items at the court of the Chanyu. Let us hire foreign artisans to craft a golden crown to inspire awe and majesty for the numerous subjects of the Chanyu."
 
  xiongnu_missions_2_task_12: "Central Sanctuary"
- xiongnu_missions_2_task_12_DESC: ""
+ xiongnu_missions_2_task_12_DESC: "Longcheng has always been the spiritual heart of the Xiongnu people since before our great conquests. The capital and holiest city of the empire should be venerated as such with sacred dedications and rituals befitting our new-found wealth."
 
  xiongnu_missions_2_task_13: "Enter the Desert"
  xiongnu_missions_2_task_13_DESC: "It is not enough to control the Hexi cooridor trade, as the statelets and tribesmen around the Taklamakan continue to realize profits that could be ours. Let us gallop into the first of the areas of the desert oases to exact our tribute."
 
  xiongnu_missions_2_task_14: "Yeet Yan"
- xiongnu_missions_2_task_14_DESC: " The Yan are the northern-most of the Chinese Warring States, and have been attempting to blend our steppe tactics with Chinese conventional power. We must not allow them to gain the upper hand on our horsemen. Plundering the great city of Ji will be ample incentive for our tribesmen, with the finest women and goods to be claimed by the Chanyu."
+ xiongnu_missions_2_task_14_DESC: "The Yan are the northern-most of the Chinese Warring States, and have been attempting to blend our steppe tactics with Chinese conventional power. We must not allow them to gain the upper hand on our horsemen. Plundering the great city of Ji will be ample incentive for our tribesmen, with the finest women and goods to be claimed by the Chanyu."
 
  xiongnu_missions_2_task_15: "The Eastern Coast"
- xiongnu_missions_2_task_15_DESC: ""
+ xiongnu_missions_2_task_15_DESC: "Beyond the Hu peoples lay the Tungusic-speaking tribes that sit against the great ocean. Their lands are cold forests and tundra ruled by lesser, albeit ferocious, warriors who have not realized the value of their woodlands and mines. It is time to subjugate these fractious peoples and make better use of their resources."
 
  xiongnu_missions_2_task_16: "Chinese Concubine"
- xiongnu_missions_2_task_16_DESC: ""
+ xiongnu_missions_2_task_16_DESC: "One price exacted on the Chinese city-builders is the forced marriage of Chinese princesses to the court of the Xiongnu - with the most beautiful serving as concubines of the Chanyu, and the rest being given to nobles across the vast, multi-ethnic tribal confederation. Let us take a beautiful princess from one of our Chinese vassals to serve in the royal palace. "
 
  xiongnu_missions_2_task_17: "City of the Chanyu"
- xiongnu_missions_2_task_17_DESC: ""
+ xiongnu_missions_2_task_17_DESC: "It is time to make Longcheng into a proper city - no longer just a place for tents and pastures, but a metropolis built in the heart of the steppe, blending nomadic themes with Chinese architectural brilliance. The Chanyu shall rule from a seat of radiant glory over our vast lands."
 
  xiongnu_missions_2_task_18: "March Further West"
- xiongnu_missions_2_task_18_DESC: ""
+ xiongnu_missions_2_task_18_DESC: "Conquest of the Balkash region has brought us into contact with even more steppe tribes. These horsemen describe vast riches of hitherto unknown empires in lands far to the south and west. Plunder from their recent raids prove the extravanct wealth of these nations, and the Chanyu greatly desires these prestige items. The only problem is that these tribes lay between our armies and the unknown empires, but that can be remedied..."
 
  xiongnu_missions_2_task_19: "Western Taklamakan"
- xiongnu_missions_2_task_19_DESC: ""
+ xiongnu_missions_2_task_19_DESC: "The vast riches of Tarim Basin oasis cities are now within our grasp - their desert fortresses will not be able to hold out forever against the might of the Chanyu's hordes of Asia. The plunder of the great cities of the Silk Road will fill the wallets of our tribesmen, and that of the Chanyu."
 
  xiongnu_missions_2_task_20: "Thrust into Jin"
- xiongnu_missions_2_task_20_DESC: ""
+ xiongnu_missions_2_task_20_DESC: "Peoples with strange bronze knives and speaking unheard languages lay in a hilly peninsula to the south of out eastern-most holdings. It is time for the Chanyu to bring these strange peoples to their knees, exacting tribute and subjugation on the peoples of this peninsula and acquiring their bronze treasures."
 
  xiongnu_missions_2_task_21: "From West to East"
- xiongnu_missions_2_task_21_DESC: ""
+ xiongnu_missions_2_task_21_DESC: "The greatness of our empire stretches so far from west to east that we can hardly even conceive its borders. We must maintain control over every corner of our empire by ensuring the loyalty of the various governors of the foreign districts."
  
  xiongnu_missions_2_task_22: "The Peninsula of Jin"
- xiongnu_missions_2_task_22_DESC: ""
+ xiongnu_missions_2_task_22_DESC: "There shall be no more indepedent Korea - we must finish the job and conquer the remaining independent states in the region, securing our entire eastern land border against the great ocean."
 
 
  #Events
