more xiongnu loc

--- a/localization/english/missions/xiongnu_missions_3_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_3_l_english.yml
@@ -2,25 +2,25 @@
 
  xiongnu_missions_3:0 "Xiongnu of China"
  xiongnu_missions_3_DESCRIPTION:0 "Mission description"
- xiongnu_missions_3_CRITERIA_DESCRIPTION:0 "This mission will be completed when"
+ xiongnu_missions_3_CRITERIA_DESCRIPTION:0 "This mission will be completed when China is fully under the control of the Xiongnu Empire."
  xiongnu_missions_3_BUTTON_TOOLTIP:0 ""
 
  #Missions
 
  xiongnu_missions_3_task_1:0 "Zhaoan Subjects"
- xiongnu_missions_3_task_1_DESC:0 ""
+ xiongnu_missions_3_task_1_DESC:0 "The Zhao have long had a policy of mimicking our fighting and clothing style in an attempt to fend off our aggression, in a similar manner to the former Yan state. We must begin our invasion here, against one of our most capable foes, to neuter any chance at our tactical advantages in cavalry being negated by Chinese strategists."
 
  xiongnu_missions_3_task_2:0 "Destroy Zhao"
- xiongnu_missions_3_task_2_DESC:0 ""
+ xiongnu_missions_3_task_2_DESC:0 "We cannot be content with just neutering Zhao - their state must cease to exist as a political entity if we are to gain dominion over the riches of the Yellow River."
 
  xiongnu_missions_3_task_3:0 "Incorporate the Han"
- xiongnu_missions_3_task_3_DESC:0 ""
+ xiongnu_missions_3_task_3_DESC:0 "The second of the three Jins - the Han state - has long been a weakling amongst the warring states. They are weak and vulernable, and have yet to see the hooves of the hundred nations of the Xiongnu outside of their cities. Let us demonstrate our might against the Han and plunder their rich cities before they are taken by the other powers."
 
  xiongnu_missions_3_task_4:0 "Crush Chu"
- xiongnu_missions_3_task_4_DESC:0 ""
+ xiongnu_missions_3_task_4_DESC:0 "Chu has long been in decline despite holding vast terriroties stretching beyond the fertile plains, into the deep tropical jungles of the south. We should pounce on Chu and gobble up their vast territory lest the Qin or Qi states beat us to it."
 
  xiongnu_missions_3_task_5:0 "Chew Chu"
- xiongnu_missions_3_task_5_DESC:0 ""
+ xiongnu_missions_3_task_5_DESC:0 "It is time to finally end the existence of the depleted Chu state - they are fortunate to now live udner the yolk of our great Chanyu, who will better manage their lands."
 
  xiongnu_missions_3_task_6:0 "Mouth of the Yellow River"
  xiongnu_missions_3_task_6_DESC:0 ""
@@ -44,7 +44,7 @@
  xiongnu_missions_3_task_12_DESC:0 ""
 
  xiongnu_missions_3_task_13:0 "Storm the Sichuan Basin"
- xiongnu_missions_3_task_13_DESC:0 ""
+ xiongnu_missions_3_task_13_DESC:0 "The Sichuan Basin is replete with exotic animals, tea and other goods the Chanyu greatly covets. The Basin must belong to the Great Chanyu, if not peacefully, then by force."
 
  xiongnu_missions_3_task_14:0 "Three Gorges"
  xiongnu_missions_3_task_14_DESC:0 ""
@@ -68,10 +68,10 @@
  xiongnu_missions_3_task_20_DESC:0 ""
 
  xiongnu_missions_3_task_21:0 "The Great City of Ji"
- xiongnu_missions_3_task_21_DESC:0 ""
+ xiongnu_missions_3_task_21_DESC:0 "The city of Ji lay in the perfect position between our homelands in the vast steppe north of the Gobi, and the great Chinese civilization now mostly controlled by our empire. We shall consecrate a southern capital at this great city to unite steppe civilization with Chinese urbanism."
 
  xiongnu_missions_3_task_22:0 "Sinicization"
- xiongnu_missions_3_task_22_DESC:0 ""
+ xiongnu_missions_3_task_22_DESC:0 "The Xiongnu ethnic peoples have become a small minority not just among our steppe tribal folk, but now especially among the numerous hordes of the Chinese we have subjugated. If we have any hope of maintaining control of China, we must integrate their peoples, accept Chinese ways and adopt more of their cultural practices."
 
  xiongnu_missions_3_task_23:0 "Xiongnu Dynasty"
  xiongnu_missions_3_task_23_DESC:0 ""
@@ -86,10 +86,10 @@
  xiongnu_missions_3_task_26_DESC:0 ""
 
  xiongnu_missions_3_task_27:0 "Work the Silk Farms"
- xiongnu_missions_3_task_27_DESC:0 ""
+ xiongnu_missions_3_task_27_DESC:0 "The secret of silk manufacture is now in our hands as the masters of all China. Let us exploit this knowledge and ramp up production of silk to enrich the imperial coffers."
 
  xiongnu_missions_3_task_28:0 "Control the Silk Road"
- xiongnu_missions_3_task_28_DESC:0 ""
+ xiongnu_missions_3_task_28_DESC:0 "Control over China and the Silk Road will lead to one thousand years of prosperity for our nation. Merchants from across the world will seek our metropoli for the never-ending wealth that our country generates, for the hope of bringing just a piece back to their home."
 
 
  #Events
