--- a/localization/english/missions/xiongnu_missions_3_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_3_l_english.yml
@@ -20,28 +20,28 @@
  xiongnu_missions_3_task_4_DESC:0 "Chu has long been in decline despite holding vast terriroties stretching beyond the fertile plains, into the deep tropical jungles of the south. We should pounce on Chu and gobble up their vast territory lest the Qin or Qi states beat us to it."
 
  xiongnu_missions_3_task_5:0 "Chew Chu"
- xiongnu_missions_3_task_5_DESC:0 "It is time to finally end the existence of the depleted Chu state - they are fortunate to now live udner the yolk of our great Chanyu, who will better manage their lands."
+ xiongnu_missions_3_task_5_DESC:0 "It is time to finally end the existence of the depleted Chu state - they are fortunate to now live under the yolk of our great Chanyu, who will better manage their lands."
 
  xiongnu_missions_3_task_6:0 "Mouth of the Yellow River"
  xiongnu_missions_3_task_6_DESC:0 ""
 
- xiongnu_missions_3_task_7:0 "Check Qii"
- xiongnu_missions_3_task_7_DESC:0 ""
+ xiongnu_missions_3_task_7:0 "Check Qi"
+ xiongnu_missions_3_task_7_DESC:0 "The Qi have been one of the most powerful states of the Middle Kingdom for centuries now. Their tacticians have proven brilliant, their artisans more brilliant than all the world, and their capital of Linzi is unparalled in splendor, knowledge and wealth. All the things our Great Chanyu desires for himself..."
 
  xiongnu_missions_3_task_8:0 "Final Song"
- xiongnu_missions_3_task_8_DESC:0 ""
+ xiongnu_missions_3_task_8_DESC:0 "The land of Confucius harbors several wealthy cities and is bastion of modern philosphical thought. Our Chanyu is curious about these newfound philosphies, their origins and the people from which they derive. Unfortunately for the leaders of Song, this means their lands will now belong to the Xiongnu."
 
  xiongnu_missions_3_task_9:0 "Famed Wu"
- xiongnu_missions_3_task_9_DESC:0 ""
+ xiongnu_missions_3_task_9_DESC:0 "From recently acquired Chinese texts, told by the Chinese historians now employed by our court, the old territory of Wu was home to not only a powerful state defeat last century, but also was brought down by the most beautiful women to have ever lived, Xi Shi. Her beauty seduced the king of Wu, much as this tale has seduced our Chanyu. We must ride out to the lands of the Wu and investigate the local legends to please the Chanyu, resistance to this quest will not be tolerated. "
 
  xiongnu_missions_3_task_10:0 "Oh Yueh"
- xiongnu_missions_3_task_10_DESC:0 ""
+ xiongnu_missions_3_task_10_DESC:0 "The hundred Yue tribes, long the bain of Chinese civilization, are now our problem inherited from our conquests. The tropical diseases, strange animals, and painted bodies of jungle warriors all haunt our cavalry, while the Chinese infantry also cower in fear. We must shatter the notion of mystique surrounding these barbarians and crush them into dirt."
 
  xiongnu_missions_3_task_11:0 "Consolidate North-Western China"
- xiongnu_missions_3_task_11_DESC:0 ""
+ xiongnu_missions_3_task_11_DESC:0 "The Qin are our final great foe of China, and must be boxed in. Controlling the lands surrounding their heartland will ensure we have no rivals in the Yellow River and give us a a launching pad from which to strike their capital."
 
  xiongnu_missions_3_task_12:0 "Extinguish Qin"
- xiongnu_missions_3_task_12_DESC:0 ""
+ xiongnu_missions_3_task_12_DESC:0 "The end of the Warring States period draws near- with the sound of hooves trampling through the Qin capital of Xianyang and tearing down the palaces of Chang'an. The Chanyu will have the entire Chinese nation bowing before his valiant steed after the Qin have been destroyed."
 
  xiongnu_missions_3_task_13:0 "Storm the Sichuan Basin"
  xiongnu_missions_3_task_13_DESC:0 "The Sichuan Basin is replete with exotic animals, tea and other goods the Chanyu greatly covets. The Basin must belong to the Great Chanyu, if not peacefully, then by force."
@@ -80,7 +80,7 @@
  xiongnu_missions_3_task_24_DESC:0 ""
 
  xiongnu_missions_3_task_25:0 "Wei's Demise"
- xiongnu_missions_3_task_25_DESC:0 ""
+ xiongnu_missions_3_task_25_DESC:0 "The final of the three Jins, Wei, sits at the heart of the Yellow River. "
 
  xiongnu_missions_3_task_26:0 "Mouths of Great Rivers"
  xiongnu_missions_3_task_26_DESC:0 ""
