--- a/localization/english/missions/lu_missions_l_english.yml
+++ b/localization/english/missions/lu_missions_l_english.yml
@@ -1,28 +1,32 @@
 ﻿l_english:
 
- lu_missions: "All Zhou Rituals Are in Lu"
- lu_missions_DESCRIPTION: "Mission description"
- lu_missions_CRITERIA_DESCRIPTION: "This mission will be completed when"
- lu_missions_BUTTON_TOOLTIP: ""
+ lu_missions: "Rituals of Lu"
+ lu_missions_DESCRIPTION: "Hundreds of years ago the Lu state was established in Qufu and given to Bo Qin by the Duke of Zhou. For many generations we have ruled over these lands however the Lu are not as strong as they once were. Ever since the great Battle of Changshao many years ago our power has been waning in the shadow of the states of Qi and Chu. For many years the Three Huan a group of 3 powerful families held our great state of Lu in a stranglehold, it wasn't until the time of Confucius many generations ago that the power of the Duke's of Lu was once again restored. Today times are as uncertain as ever, all of China is at each others throats and the once great power of the Zhou Emperor is fading more with each day. The ever expanding power of the Qi and Chu has put the stability of our once great state in peril, only time will tell what history has in store for the legendary dukes of Lu."
+ lu_missions_CRITERIA_DESCRIPTION: "This mission will be completed when Lu has defeated the other states of China!"
+ lu_missions_BUTTON_TOOLTIP: "Glory can only be achieved by those bold enough to claim it!"
 
  #Missions
 
- lu_missions_task_1: "Arming for War" #Battle of Changshao was last time Lu > Qi
- lu_missions_task_1_DESC: ""
+ # Battle of Changshao was last time Lu > Qi
+ lu_missions_task_1: "Arming for War"
+ lu_missions_task_1_DESC: "It is clear that the time for war is quickly approaching, the only question that remains is with who and when. Many in our nation suggest we prepare ourselves immediately for the ensuing struggle that seems to be all but inevitable at this point..."
 
- lu_missions_task_2: "Lu Etiquette" #Lu was a famous country of etiquette. The close relationship between the Lu State and the Zhou rites resulted in the formation of a simple folk custom of humility and courtesy in the Lu State. At the same time, it also greatly affected the development of the Lu State's national power. When the rites and music in the Spring and Autumn Period collapsed, people at that time still said that Lu still upheld the rites of Zhou. 
- lu_missions_task_2_DESC: ""
+ # Lu was a famous country of etiquette. The close relationship between the Lu State and the Zhou rites resulted in the formation of a simple folk custom of humility and courtesy in the Lu State. At the same time, it also greatly affected the development of the Lu State's national power. When the rites and music in the Spring and Autumn Period collapsed, people at that time still said that Lu still upheld the rites of Zhou. 
+ lu_missions_task_2: "Lu Etiquette"
+ lu_missions_task_2_DESC: "Although many of the surrounding Zhou dynasties have abandoned the countless formal rites and rituals of the once great dynasty the Dukes of Lu have never once wavered in their undying loyalty to the great traditions of the past. Proper etiquette has always been a commonality among all competent Lu statesmen. Even though over time the many states around us have left the old ways behind them the never ending tides of time have yet to change the ways of Lu."
 
- lu_missions_task_3: "Dominate the Small States" #Small states were in Lu sphere of influence
- lu_missions_task_3_DESC: ""
+ lu_missions_task_3: "Dominate the Small States"
+ lu_missions_task_3_DESC: "Many minor Zhou states can be found just outside of our borders. Several prominent statesmen in the Lu court suggest we seize these lands for ourselves to strengthen our position before an inevitable confrontation with a much larger power arises."
 
  lu_missions_task_4: "Seize Song"
- lu_missions_task_4_DESC: ""
-
- lu_missions_task_5: "Land of All Rituals and Music" #The State of Lu became the preserver and implementer of typical Zhou rites , and the world said that all Zhou rites are in Lu. When princes from various countries knew about Zhou rites, they often went to Lu to study them
+ lu_missions_task_4_DESC: "The Song dynasty on our southern border are the logical target for any kind of conquest we want to embark upon. A direct confrontation with the larger states of Qi or Chu at this point could lead to our demise. Seizing the lands of Song would strengthen our position and perhaps even deter any would be invaders."
+ 
+ #The State of Lu became the preserver and implementer of typical Zhou rites , and the world said that all Zhou rites are in Lu. When princes from various countries knew about Zhou rites, they often went to Lu to study them
+ lu_missions_task_5: "Land of All Rituals and Music"
  lu_missions_task_5_DESC: ""
 
- lu_missions_task_6: "Destroy the Last Huanen" #Huanen were three side branches spawned by ruler Huanen. They dominated the state until Mu defeated two of three. The third became an independent country, Bi.
+ #Huanen were three side branches spawned by ruler Huanen. They dominated the state until Mu defeated two of three. The third became an independent country, Bi.
+ lu_missions_task_6: "Destroy the Last Huanen" 
  lu_missions_task_6_DESC: ""
 
  lu_missions_task_7: "Weaken Qi"
@@ -37,7 +41,8 @@
  lu_missions_task_10: "Check Chu"
  lu_missions_task_10_DESC: ""
 
- lu_missions_task_11: "Finance Astronomy" #annals preserved many records of astronomical observations, astronomer Gan De was likely born in Lu, but moved to Qi.
+ # Annals preserved many records of astronomical observations, astronomer Gan De was likely born in Lu, but moved to Qi.
+ lu_missions_task_11: "Finance Astronomy"
  lu_missions_task_11_DESC: ""
 
  lu_missions_task_12: "Destroy Qi"
@@ -46,10 +51,11 @@
  lu_missions_task_13: "Liberate Yue" #invited Yue to crush Huanen
  lu_missions_task_13_DESC: ""
 
- lu_missions_task_14: "Western Brethern" #Dukes of Lu descend from Zhou
+ lu_missions_task_14: "Western Brethren" #Dukes of Lu descend from Zhou
  lu_missions_task_14_DESC: ""
 
- lu_missions_task_15: "Spring and Autumn Annals" #Were written in Lu and counting of years was according to the rulers of Lu
+ # Were written in Lu and counting of years was according to the rulers of Lu
+ lu_missions_task_15: "Spring and Autumn Annals"
  lu_missions_task_15_DESC: ""
 
  lu_missions_task_16: "Shaohao's Ruins"  #see deity Shaohao
@@ -186,13 +192,13 @@
  temple_of_confucius_state_mod: "$lu_missions_task_9$"
  confucius_lu_mod: "Word of Confucius"
  revenge_of_last_huanen: "Revenge of the Last Huanen"
- desc_lu_etiquette_mod: "TODO MOD"
- desc_battle_of_changshao_mod: "TODO MOD"
- desc_lu_rituals_music_mod: "TODO MOD"
- desc_shahoa_ruins_mod: "TODO MOD"
- desc_destroyed_last_huanen: "TODO MOD"
- desc_temple_of_confucius_country_mod: "TODO MOD"
- desc_temple_of_confucius_state_mod: "TODO MOD"
- desc_confucius_lu_mod: "TODO MOD"
- desc_revenge_of_last_huanen: "TODO MOD"
+ desc_lu_etiquette_mod: "Lu Etiquette"
+ #battle_of_changshao_mod_desc: "TODO MOD"
+ #lu_rituals_music_mod_desc: "TODO MOD"
+ #shahoa_ruins_mod_desc: "TODO MOD"
+ #destroyed_last_huanen_desc: "TODO MOD"
+ #temple_of_confucius_country_mod_desc: "TODO MOD"
+ #temple_of_confucius_state_mod_desc: "TODO MOD"
+ #confucius_lu_mod_desc: "TODO MOD"
+ #revenge_of_last_huanen_desc: "TODO MOD"
  lu_etiquette_opinion_mod: "Introduced Lu Etiquette"
